WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
42960
[GStreamer] media/invalid-media-url-crash.html fails
https://bugs.webkit.org/show_bug.cgi?id=42960
Summary
[GStreamer] media/invalid-media-url-crash.html fails
Philippe Normand
Reported
2010-07-26 01:16:01 PDT
Because our webkitmediasrc element doesn't push an error on the GStreamer bus if a wrong url is loaded.
Attachments
proposed patch
(3.23 KB, patch)
2010-07-26 01:29 PDT
,
Philippe Normand
mrobinson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2010-07-26 01:29:36 PDT
Created
attachment 62549
[details]
proposed patch
Martin Robinson
Comment 2
2010-08-16 11:00:37 PDT
Comment on
attachment 62549
[details]
proposed patch
> void StreamingClient::wasBlocked(ResourceHandle*) > { > + WebKitWebSrcPrivate* priv = m_src->priv; > + GST_ERROR_OBJECT(m_src, "Request was blocked"); > + GST_ELEMENT_ERROR(m_src, RESOURCE, OPEN_READ, ("Access to \"%s\" was blocked", priv->uri), (0)); > }
> void StreamingClient::cannotShowURL(ResourceHandle*) > { > + WebKitWebSrcPrivate* priv = m_src->priv;
Just a minor nit, you can simply use m_src->priv->uri here instead of caching the pointer locally. LGTM with those lines changed.
Philippe Normand
Comment 3
2010-08-16 23:49:21 PDT
Thanks, landed in
http://trac.webkit.org/changeset/65486
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug