2010-08-17  Philippe Normand  <pnormand@igalia.com>

Reviewed by Martin Robinson.

        [GStreamer] media/invalid-media-url-crash.html fails
        https://bugs.webkit.org/show_bug.cgi?id=42960

        Implemented two ResourceHandleClient callbacks that need to notify
        downstream GStreamer elements of errors while accessing the
        resource.

        * platform/graphics/gstreamer/WebKitWebSourceGStreamer.cpp:
        (StreamingClient::wasBlocked):
        (StreamingClient::cannotShowURL):

LayoutTests:

2010-08-17  Philippe Normand  <pnormand@igalia.com>

        Reviewed by Martin Robinson.

        [GStreamer] media/invalid-media-url-crash.html fails
        https://bugs.webkit.org/show_bug.cgi?id=42960

        * platform/gtk/Skipped: Unskip fixed test

Canonical link: https://commits.webkit.org/56286@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@65486 268f45cc-cd09-0410-ab3c-d52691b4dbfc